tests/invalid/missing_init_pred.err_exp
missing_init_pred.m:013: In clause for initialisation predicate for type `t':
missing_init_pred.m:013:   error: undefined predicate
missing_init_pred.m:013:   `missing_init_pred.init'/1.
